Added option for optimising writes to constraint trace only during satisfies, with the default behaviour now being to always write to constraint trace for consistency with previous versions. Made IEvlContext.constraintsDependedOn lazily initialized, since this can be derived by checking all of the constraints for the dependency flag. Renamed checkTrace to isDependedOn in Constraint to better describe the functionality. Removed boolean parameter when setting as dependency, since it will always be set from false to true.